--- a/style.css
+++ b/style.css
@@ -3,11 +3,19 @@
     padding: 0;
 }
 body {
-    background-color: #212121;
+    background-color: #7E7773;
 }
 .title {
     font-size: 4rem;
     margin-top: 3rem;
-    color: #53D3D1;
+    color: #F6F0EE;
     text-align: center;
+}
+.cardgrid {
+    display: grid;
+    gap: 1rem;
+    grid-template: repeat(5, 1fr);
+}
+.cardgrid__desc {
+    background-color: ;
 }
